--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -219,19 +219,44 @@ var(X) &= \frac{\sum{(X - \bar{X})^2}}{N}\\
 &= \frac{(-2)^2 + (0)^2 (2)^2}{3} \\
 &= \frac{4 + 0 + 4}{3} \\
 &= \frac{8}{3} \\
-&= 2.67 grams^2
+&= 2.67 grams^2 \\
 \end{aligned} 
 $$
 
-$$
-\begin{aligned} 
-sd(X) &= \sqrt{var(X)} \\
-&= \sqrt{var(X)} \\
-\end{aligned} 
-$$
+
+**Variance by any other name**. Variance is used in many places in inferential statistics. Unfortunately, it often goes by other name. Some of those names are listed below.
+
+| Variance synonyms |
+| :-: |
+| Mean Squared Error |
+| MSE |
+| Pooled variance |
+| $s_{pooled}^2$ |
+| $s_{p}^2$ |
+| $s_{residual}^2$ |
+
+
+
 ### Standard Deviation
 
 Variance is easy to interpret as a the average of the squared differences between the model and the data. However, variance presents an answer in squared units (e.g., 2.67 grams$2$). Consequently, some people prefer to take the square root of this value and call it standard deviation.
 
+$$
+\begin{aligned} 
+sd(X) &= \sqrt{var(X)} \\
+&= \sqrt{2.67} \\
+&= 1.63 grams\\
+\end{aligned} 
+$$
 
-'
+Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. Standard deviation can be thought of as the sum of the absolute deviations from the mean divided by the square root of the number of observations. Standard deviation is not an average - because you are dividing by the square root of N instead of just N. As a result, it's much harder to describe what standard deviation means.
+
+$$
+\begin{aligned} 
+sd(X) &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
+ &= \frac{\sum{|X - \bar{X}|}}{\sqrt{N}}\\
+\end{aligned} 
+$$
+
+We encourage you to think in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straight forward. Additionally, variance if the foundational to the language used to describe regression and analysis of variance.
+
