--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-09}
+\date{2020-07-10}
 
 \begin{document}
 \maketitle
@@ -4582,6 +4582,7 @@ A final approach uses tidyverse commands. This approach is oddly long - and we w
 \StringTok{  }\KeywordTok{pivot_wider}\NormalTok{(}\DataTypeTok{names_from =}\NormalTok{ stat,}
               \DataTypeTok{values_from =}\NormalTok{ value)}
 
+\CommentTok{# round to 3 decimals}
 \NormalTok{summary_table_rounded <-}\StringTok{ }\NormalTok{summary_table }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{mutate}\NormalTok{(}\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{where}\NormalTok{(is.numeric),}
                 \DataTypeTok{.fns=}\NormalTok{ round,}
@@ -4668,28 +4669,12 @@ tidyverse\tabularnewline
 \bottomrule
 \end{longtable}
 
-The following data files are used in this chapter:
-
-\begin{longtable}[]{@{}l@{}}
-\toprule
-Required Data\tabularnewline
-\midrule
-\endhead
-data\_ex\_between.csv\tabularnewline
-\bottomrule
-\end{longtable}
-
-The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
-
-\hypertarget{objective-2}{%
-\section{Objective}\label{objective-2}}
-
 \hypertarget{notation}{%
 \section{Notation}\label{notation}}
 
-In this chapter we will use summation notation in the formulas describing population. If you are not familiar with summation notation, we present a brief overview here.
+In this chapter we will use summation notation. If you are not familiar with summation notation, we present a brief overview here.
 
-Consider a scenario where we have the IQ data for three participants We use the N symbol to represent sample size. Because we have three participants N = 3. The data for these participants is illustrated in Figure \ref{fig:notationdata}.
+Consider a scenario where we have the IQ data for three participants We use the N symbol to represent the number of participants. Because we have three participants N = 3. The data for these participants is illustrated in Figure \ref{fig:notationdata}.
 
 Notice how each person in the data set can be represent by the variable X. The first person by X\_1, the second by X2, and the third by X\_3. Often we refer to individuals in a data set by using the variable X accompanied by a subscript (e.g., 1, 2, 3, etc.).
 
@@ -4697,7 +4682,7 @@ Notice how each person in the data set can be represent by the variable X. The f
 \includegraphics[width=0.55\linewidth]{ch_populations/images/screenshot_data_n6} \caption{Data for understanding summation notation}\label{fig:notationdata}
 \end{figure}
 
-Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., \(\Sigma\)) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case i to represent all possible subscript values. The notation below the \(\Sigma\), i = 1, indicates that we should start with participant 1. The notation below the \(\Sigma\), N, indicates that we should iterate i up to the value indicated by N; in this case 3, because there are three participants.
+Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., \(\Sigma\)) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case \(i\) to represent all possible subscript values. The notation below the \(\Sigma\), \(i\) = 1, indicates that we should start with participant 1. The notation below the \(\Sigma\), N, indicates that we should iterate \(i\) up to the value indicated by N; in this case 3, because there are three participants.
 
 \[
 \begin{aligned} 
@@ -4707,7 +4692,7 @@ Referring to participants using the variable X and subscript is valuable because
 \end{aligned} 
 \]
 
-Sometime to simplify the notation, the numbers above and below the \(Sigma\) symbol are omitted. Likewise, the i subscript is omitted. There is a general understanding that we these components of the notation are omitted that the version of the notation above is implied.
+Sometimes, to simplify the notation, the numbers above and below the \(\Sigma\) symbol are omitted. Likewise, the \(i\) subscript is omitted. There is a general understanding that these components of the notation are omitted that the version of the notation above is implied.
 
 \[
 \begin{aligned} 
@@ -4770,123 +4755,155 @@ Likewise, the sum of the squared deviations from the mean can be expressed using
 
 As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A populations is the complete set of people/animals about which we want to make conclusions. Samples are a subset of the total number of people/animals in the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample.
 
-Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population not conlusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope creates immunity to COVID-19. We care very little if the immunity only works for the specific indiviudals in the study. However, we care a great deal with if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
+Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population not conclusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope creates immunity to COVID-19. We care very little if the immunity only works for the specific individuals in the study. However, we care a great deal with if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
 
 Statistic tests are means of helping researchers use sample data to make conclusions at the population level. When we calculate numbers based on all of the people/animals in the population we refer to those numbers as \textbf{parameters}. We calculate numbers based on the people/animals in the sample we refer to those numbers as \textbf{statistics}. In general, statistics are used to estimate parameters.
 
 \hypertarget{describing-populations}{%
 \section{Describing populations}\label{describing-populations}}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{library}\NormalTok{(tidyverse)}
-\KeywordTok{library}\NormalTok{(learnSampling)}
+Populations are typically quite large, but, for the purpose or reviewing how we typically describe populations we focus on a population of just three chocolate chip cookies. We refer to the three cookies as \(X_1\), \(X_2\), and \(X_3\). The cookies have the weights of 8, 10, and 12 grams, respectively.
 
-\NormalTok{pop_data <-}\StringTok{ }\KeywordTok{get_height_population}\NormalTok{() }
-\end{Highlighting}
-\end{Shaded}
+\hypertarget{mean}{%
+\subsection{Mean}\label{mean}}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{pop_data }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{pop_mean =} \KeywordTok{mean}\NormalTok{(height)) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{as.data.frame}\NormalTok{()}
-\end{Highlighting}
-\end{Shaded}
+It can be helpful to create a model of our data such that each observation represents a deviation from a model describing the entire set of observations. That is we can think of our three cookies using the approach:
 
-\begin{verbatim}
-##   pop_mean
-## 1    172.5
-\end{verbatim}
+\[
+\begin{aligned} 
+X_i &= model + error_i \\
+\end{aligned} 
+\]
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\CommentTok{# set.seed ensures you get the same random samples}
-\KeywordTok{set.seed}\NormalTok{(}\DecValTok{1}\NormalTok{) }
+We can create a model for our data using many different approaches. A simple model for our data is the mean:
 
-\NormalTok{many_samples <-}\StringTok{ }\KeywordTok{get_M_samples}\NormalTok{(}\DataTypeTok{pop.data =}\NormalTok{ pop_data, }
-                              \DataTypeTok{data.column.name =}\NormalTok{ height,}
-                              \DataTypeTok{n =} \DecValTok{10}\NormalTok{,}
-                              \DataTypeTok{number.of.samples =} \DecValTok{1000}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
+\[
+\begin{aligned} 
+\bar{X} &= \frac{\sum{X}}{N} \\
+&= \frac{X_1 + X_2 + X_3}{3}\\ 
+&= \frac{8 + 10 + 12}{3}\\
+&= \frac{30}{3}\\
+&= 10\\
+\end{aligned} 
+\]
 
-The many\_sample data set contains the results for all of the random samples we specified. Use head() to see the data. Each row corresponds to a random sample.
-In that row the sample number, sample size, population mean, and sample mean are provided (along with a few other numbers.
+Then we can think of this ``mean cookie'' our model as:
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{head}\NormalTok{(many_samples)}
-\end{Highlighting}
-\end{Shaded}
+\[
+\begin{aligned} 
+X_i &= \bar{X} + error_i \\
+\end{aligned} 
+\]
 
-\begin{verbatim}
-##   sample.number  n pop.M sample.M pop.var sample.var.n
-## 1             1 10 172.5    175.5   157.5       189.85
-## 2             2 10 172.5    169.6   157.5       196.64
-## 3             3 10 172.5    161.7   157.5        92.61
-## 4             4 10 172.5    178.4   157.5       102.04
-## 5             5 10 172.5    174.7   157.5       350.81
-## 6             6 10 172.5    166.0   157.5       236.00
-##   sample.var.n_1
-## 1          210.9
-## 2          218.5
-## 3          102.9
-## 4          113.4
-## 5          389.8
-## 6          262.2
-\end{verbatim}
+The model, above is just concise way of describing the following:
 
-We can glimpse() the many\_sample data to confirm the total number of rows is that same as we requested.
+\[
+\begin{aligned} 
+X_1 &= \bar{X} + error_1 \\
+X_2 &= \bar{X} + error_2 \\
+X_3 &= \bar{X} + error_3 \\
+\end{aligned} 
+\]
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{glimpse}\NormalTok{(many_samples)}
-\end{Highlighting}
-\end{Shaded}
+That is the weights of the three cookies (\(X_1 = 8\), \(X_2 = 10\), and \(X_3 = 12\)) can be conceptualized as:
 
-\begin{verbatim}
-## Rows: 1,000
-## Columns: 7
-## $ sample.number  <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 1...
-## $ n              <dbl> 10, 10, 10, 10, 10, 10, 10, 10, ...
-## $ pop.M          <dbl> 172.5, 172.5, 172.5, 172.5, 172....
-## $ sample.M       <dbl> 175.5, 169.6, 161.7, 178.4, 174....
-## $ pop.var        <dbl> 157.5, 157.5, 157.5, 157.5, 157....
-## $ sample.var.n   <dbl> 189.85, 196.64, 92.61, 102.04, 3...
-## $ sample.var.n_1 <dbl> 210.94, 218.49, 102.90, 113.38, ...
-\end{verbatim}
+\[
+\begin{aligned} 
+X_1 &= 10 + (-2) \\
+X_2 &= 10 + 0 \\
+X_3 &= 10 + 2 \\
+\end{aligned} 
+\]
 
-Sampling variability
+The mean of the population, \(\bar{X} = 10\), is a parameter that serves as model for the data. When we calculate a model for our data, it's helpful to have an index of how well the model fits the data.
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{ggplot}\NormalTok{(}\DataTypeTok{data =}\NormalTok{ many_samples,}
-       \DataTypeTok{mapping =} \KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ sample.M)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{geom_histogram}\NormalTok{()}
-\end{Highlighting}
-\end{Shaded}
+\hypertarget{variance}{%
+\subsection{Variance}\label{variance}}
 
-\begin{verbatim}
-## `stat_bin()` using `bins = 30`. Pick better value with
-## `binwidth`.
-\end{verbatim}
+Variance is a simple way of calculating how well the model fits our data. We can think of there being a conceptual ``mean cookie'' that describes our data. Then we want to see the extent to which the data differs from our ``mean cookie'' model.
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-208-1.pdf}
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{ch_populations/images/cookie} \caption{Variance as a fit index for the mean}\label{fig:meancookie}
+\end{figure}
 
-Although any
+Variance is a simple approach to assessing the fit of the model. With this approach we determine the extent to which data point deviates from our model (our mean cookie), see Figure \ref{fig:meancookie}. The deviation between each data point and the model is referred to as error.
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{many_samples }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{summarise}\NormalTok{(}\DataTypeTok{mean_of_means =} \KeywordTok{mean}\NormalTok{(sample.M))}
-\end{Highlighting}
-\end{Shaded}
+Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that minimize error. When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, complex statistical reasons, we use squared differs to index error rather than other approaches.
 
-\begin{verbatim}
-##   mean_of_means
-## 1         172.6
-\end{verbatim}
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+Cookie Mass & Model & Error = Squared Difference\tabularnewline
+\midrule
+\endhead
+\(X_1 = 8\) & \(\bar{X} = 10\) & \((X_1 - \bar{X})^2 =(8 - 10)^2= 4\)\tabularnewline
+\(X_2 = 10\) & \(\bar{X} = 10\) & \((X_2 - \bar{X})^2 =(10 - 10)^2= 0\)\tabularnewline
+\(X_3 = 12\) & \(\bar{X} = 10\) & \((X_3 - \bar{X})^2 =(12 - 10)^2= 4\)\tabularnewline
+\bottomrule
+\end{longtable}
+
+You can see in the table above that we can calculate the squared difference for data points 1 through 3. The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, \((4 + 0 + 4)/3 = 2.67\), tell us the average of the squared deviations from the model is 2.67 grams\(^2\). We refer to the this value as variance.
+
+Recall the formula for calculating an average:
+
+\[
+\begin{aligned} 
+\bar{X} &= \frac{\sum{X}}{N} \\
+\end{aligned} 
+\]
+
+You can see from the formula for variance below that variance is just an average. The average of the squared errors.
+
+\[
+\begin{aligned} 
+var(X) &= \frac{\sum{(X - \bar{X})^2}}{N}\\
+&= \frac{(X_1-\bar{X})^2 + (X_2-\bar{X})^2 + (X_3-\bar{X})^2}{N}  \\ 
+&= \frac{(8-10)^2 + (10-10)^2 + (12-10)^2}{3}\\
+&= \frac{(-2)^2 + (0)^2 (2)^2}{3} \\
+&= \frac{4 + 0 + 4}{3} \\
+&= \frac{8}{3} \\
+&= 2.67 grams^2 \\
+\end{aligned} 
+\]
+
+\textbf{Variance by any other name}. Variance is used in many places in inferential statistics. Unfortunately, it often goes by other name. Some of those names are listed below.
+
+\begin{longtable}[]{@{}c@{}}
+\toprule
+Variance synonyms\tabularnewline
+\midrule
+\endhead
+Mean Squared Error\tabularnewline
+MSE\tabularnewline
+Pooled variance\tabularnewline
+\(s_{pooled}^2\)\tabularnewline
+\(s_{p}^2\)\tabularnewline
+\(s_{residual}^2\)\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{standard-deviation}{%
+\subsection{Standard Deviation}\label{standard-deviation}}
+
+Variance is easy to interpret as a the average of the squared differences between the model and the data. However, variance presents an answer in squared units (e.g., 2.67 grams\(2\)). Consequently, some people prefer to take the square root of this value and call it standard deviation.
+
+\[
+\begin{aligned} 
+sd(X) &= \sqrt{var(X)} \\
+&= \sqrt{2.67} \\
+&= 1.63 grams\\
+\end{aligned} 
+\]
+
+Unfortunately, although variance has a straight forward interpretation, standard deviation does not. Consider what happens when you take the square root of variance. Standard deviation can be thought of as the sum of the absolute deviations from the mean divided by the square root of the number of observations. Standard deviation is not an average - because you are dividing by the square root of N instead of just N. As a result, it's much harder to describe what standard deviation means.
+
+\[
+\begin{aligned} 
+sd(X) &= \sqrt{\frac{\sum{(X - \bar{X})^2}}{N}}\\
+ &= \frac{\sum{|X - \bar{X}|}}{\sqrt{N}}\\
+\end{aligned} 
+\]
+
+We encourage you to think in terms of variance rather than standard deviation due to the fact the interpretation of variance is more straight forward. Additionally, variance if the foundational to the language used to describe regression and analysis of variance.
 
 \cleardoublepage
 
